changing the code to make it more readable

--- a/index.html
+++ b/index.html
@@ -7,21 +7,28 @@
     <title>Quiz!</title>
 </head>
 <body>
-    <div class="container start">
-        <h3 class="container-h3">Квиз!</h3>
-        <div class="btn-start">Почати</div>
-    </div>
-    <!-- Додай верстку для додатка тут -->
+    <div class="consol">Запуск...</div>
+
     <div class="container main">
-        <div class="question">2 + 2</div>
-        <div class="container-answer">
-            <div class="answer answer1">3</div>
-            <div class="answer answer2">5</div>
-            <div class="answer answer3">99</div>
-            <div class="answer answer4">4</div>
-            <div class="answer answer5">6</div>
+        <div class="container-question">
+            <div class="question">2 + 2</div>
+            <div class="container-answer">
+                <div class="answer answer1">3</div>
+                <div class="answer answer2">5</div>
+                <div class="answer answer3">99</div>
+                <div class="answer answer4">4</div>
+                <div class="answer answer5">6</div>
+            </div>
         </div>
-        
+        <div class="container container-main">
+            <div class="title">123</div>
+            <div class="btns settings-btn">Налаштування</div>
+            <div class="container-btns">
+                <div class="btns btn1">120 секунд</div>
+                <div class="btns btn2">60 секунд</div>
+                <div class="btns btn3">30 секунд</div>
+            </div>
+        </div>
     </div>
 </body>
 
