added folder images, changed animation

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="images/logo.png">
     <title>Quiz!</title>
 </head>
-<body>
+<body >
     <div class="consol">Запуск...</div>
 
     <div class="container main">
@@ -23,7 +23,7 @@
         </div>
         <div class="container container-main">
             <div class="title">123</div>
-            <div class="btns settings-btn">Налаштування</div>
+            <div class="btns settings-btn animation">Налаштування</div>
             <div class="container-btns">
                 <div class="btns btn1">120 секунд</div>
                 <div class="btns btn2">60 секунд</div>
